fixing z-index in social banner and lateral menu

--- a/src/components/LateralMenu/LateralMenu.css
+++ b/src/components/LateralMenu/LateralMenu.css
@@ -8,7 +8,7 @@
     background-color: rgba(34, 40, 49, .3);
     transform: translateX(-100%);
     transition: ease .5s transform;
-    z-index: 999;
+    z-index: 3;
 }
 
 .aside.active {
