--- a/src/components/SocialBanner/SocialBanner.css
+++ b/src/components/SocialBanner/SocialBanner.css
@@ -1,3 +1,3 @@
 .social-banner-container {
-    z-index: 100;
+    z-index: 1;
 }
